# VectorMaton

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compute_recall.py  generate_datasets.py  generate_queries.py  test_elasticsearch.py  test_pgvector.py
scripts/: download_datasets.py  generate_queries.py  generate_scalability.py  memory.py  memory_and_time.py  plot_parallel.py  plot_scalability.py  plot_sift.py  plot_threshold.py  recall_qps.py  run-ablation.sh  run-all.sh  run-parallel.sh  run-queries.sh  run-scalability.sh  run-sift.sh  run-threshold.sh
source/: baseline.cpp  baseline.h  exact.cpp  exact.h  headers.h  main.cpp  mpmc_queue.h  nsw.cpp  nsw.h  opt_query.cpp  opt_query.h  post_filtering.cpp  post_filtering.h  pre_filtering.cpp  pre_filtering.h  sa.cpp  sa.h  set_hash.cpp  set_hash.h  suffix_tree.h  test_baseline.cpp  test_hnsw.cpp  test_nsw.cpp  test_queue.cpp  test_sa.cpp  test_suffix_tree.cpp  test_vector_db.cpp  test_vectormaton.cpp  vector_db.cpp  vector_db.h  vectormaton.cpp  vectormaton.h
source/test_vectormaton/: gsa.in  internal.in
